# godot-lv2-host

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  SConstruct  default_lv2_layout.tres  icon.svg.import  lilv_host_prev.cpp  lv2_control_dropdown.gd  lv2_control_dropdown.gd.uid  lv2_control_dropdown.tscn  lv2_control_slider.gd  lv2_control_slider.gd.uid  lv2_control_slider.tscn  lv2_editor.gd  lv2_editor.gd.uid  lv2_editor.tscn  lv2host_run_scene.gd  lv2host_run_scene.gd.uid  main.gd  main.gd.uid  main.tscn  project.godot  vcpkg.json
.github/workflows/: build_images.yml  builds.yml
addons/lv2-host/: editor_lv2_host.tscn  editor_lv2_host_drop.gd  editor_lv2_host_drop.gd.uid  editor_lv2_host_instance.gd  editor_lv2_host_instance.gd.uid  editor_lv2_host_instance.tscn  editor_lv2_host_instances.gd  editor_lv2_host_instances.gd.uid  editor_lv2_host_instances.tscn  editor_lv2_host_main.tscn  lv2_host_import.gd  lv2_host_import.gd.uid  plugin.cfg
addons/lv2-host/icons/: Lv2Godot.svg.import
packaging/: zip-ignore.txt  zip-include.txt
platform/mingw/: build_debug.sh  build_release.sh
platform/osxcross/: build_deps_debug.sh  build_deps_release.sh  build_lib_debug.sh  build_lib_release.sh
platform/ubuntu/: Dockerfile  build_debug.sh  build_release.sh
platform/vcpkg/ports/lilv/: lilv-dlmopen.patch  portfile.cmake
scripts/: run_test.sh  test.sh
src/: audio_effect_get_lv2_channel.cpp  audio_effect_get_lv2_channel.h  audio_effect_set_lv2_channel.cpp  audio_effect_set_lv2_channel.h  audio_stream_lilv.cpp  audio_stream_lilv.h  audio_stream_lv2.cpp  audio_stream_lv2.h  audio_stream_lv2_channel.cpp  audio_stream_lv2_channel.h  audio_stream_player_lilv.cpp  audio_stream_player_lilv.h  audio_stream_player_lv2.cpp  audio_stream_player_lv2.h  audio_stream_player_lv2_channel.cpp  audio_stream_player_lv2_channel.h  editor_audio_meter_notches_lv2.cpp  editor_audio_meter_notches_lv2.h  lilv_circular_buffer.cpp  lilv_circular_buffer.h  lilv_host.cpp  lilv_host.h  lilv_instance.cpp  lilv_instance.h  lilv_layout.cpp  lilv_layout.h  lilv_server.cpp  lilv_server.h  lilv_server_node.cpp  lilv_server_node.h  lv2_circular_buffer.cpp  lv2_circular_buffer.h  lv2_control.cpp  lv2_control.h  lv2_host.cpp  lv2_host.h  lv2_instance.cpp  lv2_instance.h  lv2_layout.cpp  lv2_layout.h  (+6 more)
src/host/: main.cpp
templates/: godotlilv.gdextension.in  godotlv2host.gdextension.in  version_generated.gen.h.in
